--- a/SetupConfigMgrQuickTools/Product.wxs
+++ b/SetupConfigMgrQuickTools/Product.wxs
@@ -53,6 +53,7 @@
       <ComponentRef Id="comp_70B71A98_CEE2_40E9_BD17_358A59DB51FC" />
       <ComponentRef Id="comp_6A5B36D7_4085_43D3_B2C5_269846912027" />
       <ComponentRef Id="comp_300ED341_2383_436D_9168_80F22AF79249" />
+      <ComponentRef Id="comp_4E8EA0C5_E242_4F07_A191_4C06D9370871" />
       <Feature Id="DellTools" Title="Dell Tools" Level="1" Absent="allow" AllowAdvertise="no" Description="A set of tools that help support Dell devices.">
         <ComponentRef Id="comp_FEB5B608_8FD2_41B1_8CD8_6863A6C2453B" />
         <ComponentRef Id="comp_8586C663_1750_4E6C_9504_EA8E76DBDF04" />
@@ -96,6 +97,9 @@
         </Component>
         <Component Id="comp_1D33B728_D9D2_465E_B078_9AC88E6A81F7" Guid="48E36828-2DA0-4B74-A60E-6539B35D1AE5" Permanent="no" SharedDllRefCount="no" Transitive="no">
           <File Id="_F2266E5C_05BF_488A_B745_B53253A8771D" DiskId="1" Hidden="no" ReadOnly="no" TrueType="no" System="no" Vital="yes" Name="log4net.config" Source="..\Build\$(var.ConfigMgr.QuickTools.Configuration)\log4net.config" KeyPath="yes" />
+        </Component>
+        <Component Id="comp_4E8EA0C5_E242_4F07_A191_4C06D9370871" Guid="477CE93F-B614-4634-8208-27EDE9479D85" Permanent="no" SharedDllRefCount="no" Transitive="no">
+          <File Id="_7FF7D825_CB2F_44C2_8593_C99F663DCD98" DiskId="1" Hidden="no" ReadOnly="no" TrueType="no" System="no" Vital="yes" Name="SmartThreadPool.dll" Source="..\packages\SmartThreadPool.dll.2.2.4\lib\net45\SmartThreadPool.dll" KeyPath="yes" />
         </Component>
         <Directory Id="ConfigMgr.QuickTools.Binaries" />
         <Directory Id="ConfigMgr.QuickTools.Warranty.Binaries" />
